lutra-sql/src/main/java/io/lutra/antlr4/MySqlLangRuleParser.java
// Generated from C:/workspace/lutradb/lutra-sql/src/main/resources/antlr4\MySqlLangRule.g4 by ANTLR 4.8
package antlr4;
import io.lutra.visitor.MySqlLangRuleVisitor;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MySqlLangRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ADD=3, ALL=4, ALTER=5, ALWAYS=6, ANALYZE=7, AND=8, ANY=9, 
		AS=10, ASC=11, AUTO_INCREMENT=12, BEFORE=13, BETWEEN=14, BOTH=15, BTREE=16, 
		BY=17, CALL=18, CASCADE=19, CASE=20, CAST=21, CHANGE=22, CHARACTER=23, 
		CHECK=24, COLLATE=25, COLUMN=26, CONDITION=27, CONSTRAINT=28, CONTINUE=29, 
		CONVERT=30, CREATE=31, CROSS=32, CURRENT_USER=33, CURSOR=34, DATABASE=35, 
		DATABASES=36, DECLARE=37, DEFAULT=38, DELAYED=39, DELETE=40, DESC=41, 
		DESCRIBE=42, DETERMINISTIC=43, DISTINCT=44, DISTINCTROW=45, DROP=46, EACH=47, 
		ELSE=48, ELSEIF=49, ENCLOSED=50, ESCAPED=51, EXISTS=52, EXIT=53, EXPLAIN=54, 
		FALSE=55, FETCH=56, FOR=57, FORCE=58, FOREIGN=59, FROM=60, FULLTEXT=61, 
		GENERATED=62, GRANT=63, GROUP=64, HAVING=65, HIGH_PRIORITY=66, IF=67, 
		IGNORE=68, IN=69, INDEX=70, INFILE=71, INNER=72, INOUT=73, INSERT=74, 
		INTERVAL=75, INTO=76, IS=77, ITERATE=78, JOIN=79, KEY=80, KEYS=81, KILL=82, 
		LEADING=83, LEAVE=84, LEFT=85, LIKE=86, LIMIT=87, LINEAR=88, LINES=89, 
		LOAD=90, LOCK=91, LOOP=92, LOW_PRIORITY=93, MASTER_BIND=94, MASTER_SSL_VERIFY_SERVER_CERT=95, 
		MATCH=96, MAXVALUE=97, MODIFIES=98, NATURAL=99, NOT=100, NULL=101, ON=102, 
		OPTIMIZE=103, OPTION=104, OPTIONALLY=105, OR=106, ORDER=107, OUT=108, 
		OUTER=109, OUTFILE=110, PARTITION=111, PRIMARY=112, PROCEDURE=113, PURGE=114, 
		RANGE=115, READ=116, READS=117, REFERENCES=118, REGEXP=119, RELEASE=120, 
		RENAME=121, REPEAT=122, REPLACE=123, REQUIRE=124, RESTRICT=125, RETURN=126, 
		REVOKE=127, RIGHT=128, RLIKE=129, SCHEMA=130, SCHEMAS=131, SELECT=132, 
		SET=133, SEPARATOR=134, SHOW=135, SPATIAL=136, SQL=137, TABLE=138, TERMINATED=139, 
		THEN=140, TO=141, TRAILING=142, TRIGGER=143, TRUE=144, TRUNCATE=145, UNDO=146, 
		UNION=147, UNIQUE=148, UNLOCK=149, UNSIGNED=150, UPDATE=151, USAGE=152, 
		USE=153, USING=154, VALUES=155, WHEN=156, WHERE=157, WHILE=158, WITH=159, 
		WRITE=160, XOR=161, ZEROFILL=162, MAX=163, MIN=164, COUNT=165, SUM=166, 
		AVG=167, PERCENT=168, UNDER_LINE=169, TINYINT=170, SMALLINT=171, MEDIUMINT=172, 
		INT=173, INTEGER=174, BIGINT=175, REAL=176, DOUBLE=177, PRECISION=178, 
		FLOAT=179, DECIMAL=180, DEC=181, NUMERIC=182, DATE=183, TIME=184, TIMESTAMP=185, 
		DATETIME=186, YEAR=187, CHAR=188, VARCHAR=189, NVARCHAR=190, NATIONAL=191, 
		BINARY=192, VARBINARY=193, TINYBLOB=194, BLOB=195, MEDIUMBLOB=196, LONGBLOB=197, 
		TINYTEXT=198, TEXT=199, MEDIUMTEXT=200, LONGTEXT=201, ENUM=202, VARYING=203, 
		SERIAL=204, EQUAL=205, GREATER=206, LESS=207, NEQ=208, GREATER_EQUAL=209, 
		LESS_EQUAL=210, COMMA=211, S_QUOTE=212, R_QUOTE=213, F_STOP=214, L_BRACKET=215, 
		R_BRACKET=216, START=217, NUMBER=218, ID=219, WS=220;
	public static final int
		RULE_root = 0, RULE_sqlStatement = 1, RULE_ddlStatement = 2, RULE_dmlStatement = 3, 
		RULE_createStatement = 4, RULE_createContent = 5, RULE_createTable = 6, 
		RULE_dropStatement = 7, RULE_dropTable = 8, RULE_truncateStatement = 9, 
		RULE_truncateTable = 10, RULE_columnContent = 11, RULE_columnDefineStyle = 12, 
		RULE_columnDefParameters = 13, RULE_dataTypeContent = 14, RULE_primaryKey = 15, 
		RULE_primaryKeyContent = 16, RULE_keys = 17, RULE_foreignKeyContent = 18, 
		RULE_foreignKeyIndex = 19, RULE_foreignKeys = 20, RULE_foreignOnOpChange = 21, 
		RULE_dataType = 22, RULE_number = 23, RULE_ifExists = 24, RULE_ifNotExists = 25, 
		RULE_notNull = 26, RULE_selectStatement = 27, RULE_functionExpr = 28, 
		RULE_functions = 29, RULE_maxFunc = 30, RULE_minFunc = 31, RULE_sumFunc = 32, 
		RULE_avgFunc = 33, RULE_countFunc = 34, RULE_countFuncExpr = 35, RULE_distinctExpr = 36, 
		RULE_conditionExpr = 37, RULE_tableExpr = 38, RULE_tableMultp = 39, RULE_subQuery = 40, 
		RULE_tableAlias = 41, RULE_filterCondition = 42, RULE_logicOp = 43, RULE_compareExpr = 44, 
		RULE_indistinctClause = 45, RULE_valueClause = 46, RULE_rangeExpr = 47, 
		RULE_opExpr = 48, RULE_allClause = 49, RULE_anyClause = 50, RULE_existsClause = 51, 
		RULE_notExistsClause = 52, RULE_whereClause = 53, RULE_groupByClause = 54, 
		RULE_orderByClause = 55, RULE_insertStatement = 56, RULE_valueContent = 57, 
		RULE_updateStatement = 58, RULE_updateContentOptional = 59, RULE_deleteStatement = 60, 
		RULE_selectColumnMulp = 61, RULE_selectColumnName = 62, RULE_selectColumnAlias = 63, 
		RULE_columnNameMultp = 64, RULE_columnName = 65, RULE_columnAlias = 66, 
		RULE_foreignKeyName = 67, RULE_referenceTableName = 68, RULE_innerName = 69, 
		RULE_usingBTree = 70, RULE_tableName = 71, RULE_variableId = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "sqlStatement", "ddlStatement", "dmlStatement", "createStatement", 
			"createContent", "createTable", "dropStatement", "dropTable", "truncateStatement", 
			"truncateTable", "columnContent", "columnDefineStyle", "columnDefParameters", 
			"dataTypeContent", "primaryKey", "primaryKeyContent", "keys", "foreignKeyContent", 
			"foreignKeyIndex", "foreignKeys", "foreignOnOpChange", "dataType", "number", 
			"ifExists", "ifNotExists", "notNull", "selectStatement", "functionExpr", 
			"functions", "maxFunc", "minFunc", "sumFunc", "avgFunc", "countFunc", 
			"countFuncExpr", "distinctExpr", "conditionExpr", "tableExpr", "tableMultp", 
			"subQuery", "tableAlias", "filterCondition", "logicOp", "compareExpr", 
			"indistinctClause", "valueClause", "rangeExpr", "opExpr", "allClause", 
			"anyClause", "existsClause", "notExistsClause", "whereClause", "groupByClause", 
			"orderByClause", "insertStatement", "valueContent", "updateStatement", 
			"updateContentOptional", "deleteStatement", "selectColumnMulp", "selectColumnName", 
			"selectColumnAlias", "columnNameMultp", "columnName", "columnAlias", 
			"foreignKeyName", "referenceTableName", "innerName", "usingBTree", "tableName", 
			"variableId"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'1'", "'?'", "'ADD'", "'ALL'", "'ALTER'", "'ALWAYS'", "'ANALYZE'", 
			"'AND'", "'ANY'", "'AS'", "'ASC'", "'AUTO_INCREMENT'", "'BEFORE'", "'BETWEEN'", 
			"'BOTH'", "'BTREE'", "'BY'", "'CALL'", "'CASCADE'", "'CASE'", "'CAST'", 
			"'CHANGE'", "'CHARACTER'", "'CHECK'", "'COLLATE'", "'COLUMN'", "'CONDITION'", 
			"'CONSTRAINT'", "'CONTINUE'", "'CONVERT'", "'CREATE'", "'CROSS'", "'CURRENT_USER'", 
			"'CURSOR'", "'DATABASE'", "'DATABASES'", "'DECLARE'", "'DEFAULT'", "'DELAYED'", 
			"'DELETE'", "'DESC'", "'DESCRIBE'", "'DETERMINISTIC'", "'DISTINCT'", 
			"'DISTINCTROW'", "'DROP'", "'EACH'", "'ELSE'", "'ELSEIF'", "'ENCLOSED'", 
			"'ESCAPED'", "'EXISTS'", "'EXIT'", "'EXPLAIN'", "'FALSE'", "'FETCH'", 
			"'FOR'", "'FORCE'", "'FOREIGN'", "'FROM'", "'FULLTEXT'", "'GENERATED'", 
			"'GRANT'", "'GROUP'", "'HAVING'", "'HIGH_PRIORITY'", "'IF'", "'IGNORE'", 
			"'IN'", "'INDEX'", "'INFILE'", "'INNER'", "'INOUT'", "'INSERT'", "'INTERVAL'", 
			"'INTO'", "'IS'", "'ITERATE'", "'JOIN'", "'KEY'", "'KEYS'", "'KILL'", 
			"'LEADING'", "'LEAVE'", "'LEFT'", "'LIKE'", "'LIMIT'", "'LINEAR'", "'LINES'", 
			"'LOAD'", "'LOCK'", "'LOOP'", "'LOW_PRIORITY'", "'MASTER_BIND'", "'MASTER_SSL_VERIFY_SERVER_CERT'", 
			"'MATCH'", "'MAXVALUE'", "'MODIFIES'", "'NATURAL'", "'NOT'", "'NULL'", 
			"'ON'", "'OPTIMIZE'", "'OPTION'", "'OPTIONALLY'", "'OR'", "'ORDER'", 
			"'OUT'", "'OUTER'", "'OUTFILE'", "'PARTITION'", "'PRIMARY'", "'PROCEDURE'", 
			"'PURGE'", "'RANGE'", "'READ'", "'READS'", "'REFERENCES'", "'REGEXP'", 
			"'RELEASE'", "'RENAME'", "'REPEAT'", "'REPLACE'", "'REQUIRE'", "'RESTRICT'", 
			"'RETURN'", "'REVOKE'", "'RIGHT'", "'RLIKE'", "'SCHEMA'", "'SCHEMAS'", 
			"'SELECT'", "'SET'", "'SEPARATOR'", "'SHOW'", "'SPATIAL'", "'SQL'", "'TABLE'", 
			"'TERMINATED'", "'THEN'", "'TO'", "'TRAILING'", "'TRIGGER'", "'TRUE'", 
			"'TRUNCATE'", "'UNDO'", "'UNION'", "'UNIQUE'", "'UNLOCK'", "'UNSIGNED'", 
			"'UPDATE'", "'USAGE'", "'USE'", "'USING'", "'VALUES'", "'WHEN'", "'WHERE'", 
			"'WHILE'", "'WITH'", "'WRITE'", "'XOR'", "'ZEROFILL'", "'MAX'", "'MIN'", 
			"'COUNT'", "'SUM'", "'AVG'", "'%'", "'_'", "'TINYINT'", "'SMALLINT'", 
			"'MEDIUMINT'", "'INT'", "'INTEGER'", "'BIGINT'", "'REAL'", "'DOUBLE'", 
			"'PRECISION'", "'FLOAT'", "'DECIMAL'", "'DEC'", "'NUMERIC'", "'DATE'", 
			"'TIME'", "'TIMESTAMP'", "'DATETIME'", "'YEAR'", "'CHAR'", "'VARCHAR'", 
			"'NVARCHAR'", "'NATIONAL'", "'BINARY'", "'VARBINARY'", "'TINYBLOB'", 
			"'BLOB'", "'MEDIUMBLOB'", "'LONGBLOB'", "'TINYTEXT'", "'TEXT'", "'MEDIUMTEXT'", 
			"'LONGTEXT'", "'ENUM'", "'VARYING'", "'SERIAL'", "'='", "'>'", "'<'", 
			null, "'>='", "'<='", "','", "'''", "'`'", "'.'", "'('", "')'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ADD", "ALL", "ALTER", "ALWAYS", "ANALYZE", "AND", 
			"ANY", "AS", "ASC", "AUTO_INCREMENT", "BEFORE", "BETWEEN", "BOTH", "BTREE", 
			"BY", "CALL", "CASCADE", "CASE", "CAST", "CHANGE", "CHARACTER", "CHECK", 
			"COLLATE", "COLUMN", "CONDITION", "CONSTRAINT", "CONTINUE", "CONVERT", 
			"CREATE", "CROSS", "CURRENT_USER", "CURSOR", "DATABASE", "DATABASES", 
			"DECLARE", "DEFAULT", "DELAYED", "DELETE", "DESC", "DESCRIBE", "DETERMINISTIC", 
			"DISTINCT", "DISTINCTROW", "DROP", "EACH", "ELSE", "ELSEIF", "ENCLOSED", 
			"ESCAPED", "EXISTS", "EXIT", "EXPLAIN", "FALSE", "FETCH", "FOR", "FORCE", 
			"FOREIGN", "FROM", "FULLTEXT", "GENERATED", "GRANT", "GROUP", "HAVING", 
			"HIGH_PRIORITY", "IF", "IGNORE", "IN", "INDEX", "INFILE", "INNER", "INOUT", 
			"INSERT", "INTERVAL", "INTO", "IS", "ITERATE", "JOIN", "KEY", "KEYS", 
			"KILL", "LEADING", "LEAVE", "LEFT", "LIKE", "LIMIT", "LINEAR", "LINES", 
			"LOAD", "LOCK", "LOOP", "LOW_PRIORITY", "MASTER_BIND", "MASTER_SSL_VERIFY_SERVER_CERT", 
			"MATCH", "MAXVALUE", "MODIFIES", "NATURAL", "NOT", "NULL", "ON", "OPTIMIZE", 
			"OPTION", "OPTIONALLY", "OR", "ORDER", "OUT", "OUTER", "OUTFILE", "PARTITION", 
			"PRIMARY", "PROCEDURE", "PURGE", "RANGE", "READ", "READS", "REFERENCES", 
			"REGEXP", "RELEASE", "RENAME", "REPEAT", "REPLACE", "REQUIRE", "RESTRICT", 
			"RETURN", "REVOKE", "RIGHT", "RLIKE", "SCHEMA", "SCHEMAS", "SELECT", 
			"SET", "SEPARATOR", "SHOW", "SPATIAL", "SQL", "TABLE", "TERMINATED", 
			"THEN", "TO", "TRAILING", "TRIGGER", "TRUE", "TRUNCATE", "UNDO", "UNION", 
			"UNIQUE", "UNLOCK", "UNSIGNED", "UPDATE", "USAGE", "USE", "USING", "VALUES", 
			"WHEN", "WHERE", "WHILE", "WITH", "WRITE", "XOR", "ZEROFILL", "MAX", 
			"MIN", "COUNT", "SUM", "AVG", "PERCENT", "UNDER_LINE", "TINYINT", "SMALLINT", 
			"MEDIUMINT", "INT", "INTEGER", "BIGINT", "REAL", "DOUBLE", "PRECISION", 
			"FLOAT", "DECIMAL", "DEC", "NUMERIC", "DATE", "TIME", "TIMESTAMP", "DATETIME", 
			"YEAR", "CHAR", "VARCHAR", "NVARCHAR", "NATIONAL", "BINARY", "VARBINARY", 
			"TINYBLOB", "BLOB", "MEDIUMBLOB", "LONGBLOB", "TINYTEXT", "TEXT", "MEDIUMTEXT", 
			"LONGTEXT", "ENUM", "VARYING", "SERIAL", "EQUAL", "GREATER", "LESS", 
			"NEQ", "GREATER_EQUAL", "LESS_EQUAL", "COMMA", "S_QUOTE", "R_QUOTE", 
			"F_STOP", "L_BRACKET", "R_BRACKET", "START", "NUMBER", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MySqlLangRule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MySqlLangRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MySqlLangRuleParser.EOF, 0); }
		public SqlStatementContext sqlStatement() {
			return getRuleContext(SqlStatementContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlLangRuleVisitor ) return ((MySqlLangRuleVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 31)) & ~0x3f) == 0 && ((1L << (_la - 31)) & ((1L << (CREATE - 31)) | (1L << (DELETE - 31)) | (1L << (DROP - 31)) | (1L << (INSERT - 31)))) != 0) || ((((_la - 132)) & ~0x3f) == 0 && ((1L << (_la - 132)) & ((1L << (SELECT - 132)) | (1L << (TRUNCATE - 132)) | (1L << (UPDATE - 132)))) != 0)) {
				{
				setState(146);
				sqlStatement();
				}
			}

			setState(149);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlStatementContext extends ParserRuleContext {
		public DdlStatementContext ddlStatement() {
			return getRuleContext(DdlStatementContext.class,0);
		}
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlLangRuleVisitor) return ((MySqlLangRuleVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatement);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
			case DROP:
			case TRUNCATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				ddlStatement();
				}
				break;
			case DELETE:
			case INSERT:
			case SELECT:
			case UPDATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				dmlStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DdlStatementContext extends ParserRuleContext {
		public CreateStatementContext createStatement() {
			return getRuleContext(CreateStatementContext.class,0);
		}
		public DropStatementContext dropStatement() {
			return getRuleContext(DropStatementContext.class,0);
		}
		public TruncateStatementContext truncateStatement() {
			return getRuleContext(TruncateStatementContext.class,0);
		}
		public DdlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddlStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlLangRuleVisitor ) return ((MySqlLangRuleVisitor<? extends T>)visitor).visitDdlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdlStatementContext ddlStatement() throws RecognitionException {
		DdlStatementContext _localctx = new DdlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ddlStatement);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				createStatement();
				}
				break;
			case DROP:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				dropStatement();
				}
				break;
			case TRUNCATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				truncateStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlStatementContext extends ParserRuleContext {
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public UpdateStatementContext updateStatement() {
			return getRuleContext(UpdateStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public DmlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlLangRuleVisitor ) return ((MySqlLangRuleVisitor<? extends T>)visitor).visitDmlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DmlStatementContext dmlStatement() throws RecognitionException {
		DmlStatementContext _localctx = new DmlStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dmlStatement);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				selectStatement();
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				insertStatement();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				updateStatement();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 4);
				{
				setState(163);
				deleteStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateStatementContext extends ParserRuleContext {
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode L_BRACKET() { return getToken(MySqlLangRuleParser.L_BRACKET, 0); }
		public List<CreateContentContext> createContent() {
			return getRuleContexts(CreateContentContext.class);
		}
		public CreateContentContext createContent(int i) {
			return getRuleContext(CreateContentContext.class,i);
		}
		public TerminalNode R_BRACKET() { return getToken(MySqlLangRuleParser.R_BRACKET, 0); }
		public IfNotExistsContext ifNotExists() {
			return getRuleContext(IfNotExistsContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(MySqlLangRuleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MySqlLangRuleParser.COMMA, i);
		}
		public CreateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MySqlLangRuleVisitor ) return ((MySqlLangRuleVisitor<? extends T>)visitor).visitCreateStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateStatementContext createStatement() throws RecognitionException {
		CreateStatementContext _localctx = new CreateStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			createTable();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(167);
				ifNotExists();
				}
			}
